# vught-pace-keeper

./: .dockerignore  .env.coolify.example  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.coolify.yml  docker-compose.prod.yml  docker-compose.yml  justfile  manage.py  pyproject.toml  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: build-push-ghcr.yml
docker/: entrypoint.sh  gunicorn.conf.py
src/vught_pace_keeper/: asgi.py  settings.py  urls.py  wsgi.py
src/vught_pace_keeper/accounts/: adapters.py  admin.py  apps.py  models.py  strava_utils.py  urls.py  views.py
src/vught_pace_keeper/accounts/migrations/: 0001_initial.py  0002_user_date_of_birth_user_preferred_distance_unit_and_more.py  0003_alter_stravatoken_scope.py  0004_add_last_strava_sync.py
src/vught_pace_keeper/core/: admin.py  apps.py  models.py  urls.py  views.py
src/vught_pace_keeper/static/css/: input.css
src/vught_pace_keeper/strava_integration/: admin.py  apps.py  client.py  exceptions.py  models.py  services.py  urls.py  views.py
src/vught_pace_keeper/strava_integration/migrations/: 0001_initial.py  0002_delete_stravatoken.py
src/vught_pace_keeper/templates/: base.html  dashboard.html  landing.html
src/vught_pace_keeper/templates/account/: login.html  logout.html  password_reset.html  password_reset_done.html  signup.html
src/vught_pace_keeper/templates/components/: connect_with_strava.html  (+2 more)
src/vught_pace_keeper/training/: admin.py  apps.py  forms.py  gpx_utils.py  models.py  pace_calculator.py  signals.py  urls.py  views.py
(+52 files in other folders)
